@@ -1,5 +1,13 @@
 2009-03-02  Alexander Larsson  <alexl@redhat.com>
 
+	Bug 573371 – Unsafe g_htonl() macro expansion
+
+	* client/gdaemonfileoutputstream.c (append_request): 
+	* client/gdaemonfileinputstream.c (append_request): 
+	Don't use ++ inside macro that may evaluate twice.
+
+2009-03-02  Alexander Larsson  <alexl@redhat.com>
+
         * common/gdbusutils.[ch]:
 	Remove unused functions. Pointed out by Tommi Rantala.
 
